<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FRC Drive</string>
    <string name="title_section1">Operation</string>
    <string name="title_section2">I/O</string>
    <string name="title_section3">Other</string>
    <string name="action_settings">Settings</string>
    <string name="tutorial">How to Connect</string>
    <string name="wifi">Change Wifi Settings</string>
    <string name="teleoperated">Teleoperated</string>
    <string name="autonomous">Autonomous</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="tutorialtitle">How to connect to the robot</string>
    <string name="tutorialtext1">Open up the wireless setting on the phone and connect to the robot’s SSID. If the router has a password, enter the password like normal.</string>
    <string name="tutorialtext2">Under IP Settings select Static. Set the IP Address as “10.XX.YY.5” with XX being the first two digits of your team number and YY being the last two digits. If the team number is less than four digits add the appropriate number of zeros before the team number. The Gateway should be “10.XX.YY.1” and press Connect. Return to the app and the robot should be ready to drive.</string>
	<string name="tutorialpicture1">Static</string>
	<string name="tutorialpicture2">IP Address "10.20.59.5" Gateway "10.20.59.1"</string>
	<string name="leftjoy">Left Onscreen Controller</string>
	<string name="rightjoy">Right Onscreen Controller</string>
	<string name="physicaljoy">Physical Controller</string>
	<string name="leftthrottle">Left Onscreen Throttle</string>
	<string name="rightthrottle">Right Onscreen Throttle</string>
    
</resources>