<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorialtitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorialtext1" />

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@string/tutorialpicture1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ipsettings" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorialtext2" />

        <ImageView
            android:id="@+id/imageView2"
            android:contentDescription="@string/tutorialpicture2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ip" />
    </LinearLayout>

</ScrollView>