<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <intent
        android:action="android.intent.action.VIEW"
        android:targetClass="com.aquamorph.frcdrive.Preference"
        android:targetPackage="com.aquamorph.frcdrive" />
    <PreferenceCategory
        android:summary="USB Ports"
        android:title="USB Ports" >
    <ListPreference android:key="leftjoy"
 	 	    android:title="@string/leftjoy"
 		    android:entries="@array/joystickports"
		    android:entryValues="@array/joystickportsvalue"
    		android:defaultValue="1"
    		android:summary="Set the USB port" />
    <ListPreference android:key="rightjoy"
 	 	    android:title="@string/rightjoy"
 		    android:entries="@array/joystickports"
		    android:entryValues="@array/joystickportsvalue"
    		android:defaultValue="2"
    		android:summary="Set the USB port" />
    <ListPreference android:key="physicaljoy"
 	 	    android:title="@string/physicaljoy"
 		    android:entries="@array/joystickports"
		    android:entryValues="@array/joystickportsvalue"
    		android:defaultValue="3"
    		android:summary="Set the USB port" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="About"
        android:title="About" >
        <PreferenceScreen
            android:key="preferencescreen_about"
            android:summary="Open Beta"
            android:title="Version 1.0.1" />
        <PreferenceScreen
            android:key="preferencescreen_about"
            android:summary="FRC Team 2059 The Hitchhikers"
            android:title="Created by Christian Colglazier" />
    </PreferenceCategory>

</PreferenceScreen>